<?xml version="1.0"?>
<package format="3">
  <name>can_dbc_parser</name>
  <version>1.2.0</version>
  <description>
    DBC file interface.  Read a DBC file, unpack CAN messages and convert to engineering units, pack values into CAN messages for publishing.
  </description>
  <maintainer email="neweagleraptorgithub@neweagle.net">New Eagle</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>can_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
