<?xml version="1.0"?>
<package format="3">
  <name>raptor_dbw_joystick</name>
  <version>1.1.1</version>
  <description>
    Joystick controller that interfaces with raptor_dbw_can node
  </description>

  <maintainer email="newagleraptorgithub@neweagle.net">New Eagle</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
