<?xml version="1.0"?>
<package format="3">
  <name>raptor_pdu</name>
  <version>1.0.0</version>
  <description>
    Interface for the New Eagle Multiplex Power Distribution Module (MPDM)
    https://store.neweagle.net/product/multiplexed-power-distribution-module-mpdm/
  </description>

  <maintainer email="neweagleraptorgithub@neweagle.net">New Eagle</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>can_msgs</depend>
  <depend>raptor_pdu_msgs</depend>
  <depend>raptor_can_dbc_parser</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
